--- a/flask-server/frontend/src/hourly.css
+++ b/flask-server/frontend/src/hourly.css
@@ -1,16 +1,40 @@
-.hourly-container {
+/* .hourly-container {
     display: flex;
     flex-wrap: nowrap;
 
   }
   
   .hourly-item {
-    flex: 0 0 200px; /* Adjust the width as needed */
+    flex: 0 0 200px; /* Adjust the width as needed 
     margin: 10px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #e2f0ff;
 
+  }
+   */
+
+   .hourly-container {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  
+  .hourly-item {
+    flex: 0 0 200px;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #e4dede;
+    border-radius: 5px;
+    background-color: #e2f0ff;
+    text-align: center;
+  }
+  
+  .temperature {
+    font-weight: bold;
+  }
+  
+  .datetime {
+    margin-top: 5px;
   }
   
