--- a/flask-server/frontend/src/hourly.css
+++ b/flask-server/frontend/src/hourly.css
@@ -1,40 +1,19 @@
-/* .hourly-container {
-    display: flex;
-    flex-wrap: nowrap;
-
-  }
-  
-  .hourly-item {
-    flex: 0 0 200px; /* Adjust the width as needed 
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #e2f0ff;
-
-  }
-   */
 
    .hourly-container {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+
   }
   
   .hourly-item {
-    flex: 0 0 200px;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #e4dede;
-    border-radius: 5px;
-    background-color: #e2f0ff;
+    flex: 0 0 auto; 
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #f5f2f2;
+    border-radius: 6px;
+    background-color: #f9f907;
     text-align: center;
-  }
-  
-  .temperature {
-    font-weight: bold;
-  }
-  
-  .datetime {
-    margin-top: 5px;
   }
   
