--- a/flask-server/frontend/src/hourly.css
+++ b/flask-server/frontend/src/hourly.css
@@ -16,4 +16,9 @@
     background-color: #f9f907;
     text-align: center;
   }
-  
+  .temperature{
+     
+    font-weight: bold;
+    font-size: 20px;
+
+  }
